--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -215,7 +215,7 @@ footer p
 .cornerTitle {
     color: white;
 }
-img.clients {
+#clients img {
     margin: 0 auto;
     max-height: 130px;
     max-width: 250px;
@@ -227,7 +227,7 @@ img.tesla {
 }
 
 img.wirewax {
-    padding-top: 10px;
+    padding-top: 0px;
 }
 
 iframe#typeform_full {
@@ -236,8 +236,21 @@ iframe#typeform_full {
     margin: 60px;
 }
 
+blockquote {
+    color: #fff !important;
+}
+
 @media all and (max-width: 700px) {
+    #clients img {
+        max-width: 150px;
+    }
     .small-hide {
         display: none;
+    }
+    body {
+        text-align: center;
+    }
+    p {
+        text-align: left;
     }
 }
