fixed arrow direction

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -69,7 +69,7 @@ html(lang='en')
             br
             a.btn.btn-danger.btn-lg(href='#contact')
               | Get In Touch! 
-              i.fa.fa-arrow-circle-o-right
+              i.fa.fa-arrow-circle-o-down
           br
           .col-md-5
             a(href='#')
