--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,7 +37,7 @@ html(lang='en')
               br
               small.drop startup consultant
             blockquote.small-hide
-              | "Imagination is more important than knowledge" Albert Einstein
+              | "Imagination is more important than knowledge." Albert Einstein
             br
             a.btn.btn-danger.btn-lg(href='#clients')
               | Learn More 
