--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,22 +26,14 @@ html(lang='en')
     .site-overlay
     header#home.wow.fadeIn
       .container-fluid
-        // change the image in style.css to the class header .container-fluid [approximately row 50]
-        .container
-          .row
-            .col-md-3.col-xs-10
-              a.thumbnail.logo(href='#')
-          .jumbotron
-            h1.drop
-              strong Colin Gillingham
-              br
-              small.drop startup consultant
-            blockquote.small-hide
-              | "Imagination is more important than knowledge." Albert Einstein
+        .jumbotron
+          h1.drop
+            strong Colin Gillingham
             br
-            a.btn.btn-danger.btn-lg(href='#clients')
-              | Learn More 
-              i.fa.fa-arrow-circle-o-down
+            small.drop startup consultant
+          a.btn.btn-primary.btn-lg(href='#clients')
+            | Learn More 
+            i.fa.fa-arrow-circle-o-down
     section#clients.clients.wow.fadeInUp(data-wow-delay='300ms')
       .container
         .row
@@ -67,7 +59,7 @@ html(lang='en')
             p
               | Since then I took the opportunity to travel, learn how to code and recharge my own batteries ;) I just finished living in London for two years, while being a Product & Engineering Manager for a Computer Vision startup there. Now I've landed in Portugal hoping to get plugged into the thriving startup scene. 
             br
-            a.btn.btn-danger.btn-lg(href='#contact')
+            a.btn.btn-primary.btn-lg(href='#contact')
               | Get In Touch! 
               i.fa.fa-arrow-circle-o-down
           br
@@ -75,13 +67,10 @@ html(lang='en')
             a(href='#')
               img.img-responsive(src='/images/colintiles.jpg', alt='')
     section#contact.prefooter.wow.fadeInUp(data-wow-delay='300ms')
-      // change the image in style.css to the class .prefooter .container-fluid [approximately row 154]
-      .container-fluid
-        .container
-          .row
-            .col-md-12.nopadding
-              iframe#typeform-full(width='100%', height="400px", frameborder='0', src='https://gillinghammer.typeform.com/to/UXrq4f')
-                  script(type='text/javascript', src='https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js')
+      .row
+        .col-md-12.nopadding
+          iframe#typeform-full(width='100%', height="400px", frameborder='0', src='https://gillinghammer.typeform.com/to/UXrq4f')
+              script(type='text/javascript', src='https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js')
     footer
       .container
         .row
