--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,7 @@ html(lang='en')
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
-    link(href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700,100', rel='stylesheet', type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,100', rel='stylesheet', type='text/css')
     link(href='https://fonts.googleapis.com/css?family=Raleway:300,700,900,500', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.8/typicons.min.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
@@ -27,10 +27,10 @@ html(lang='en')
     header#home.wow.fadeIn
       .container-fluid
         .jumbotron
-          h1.drop
+          h1
             strong Colin Gillingham
             br
-            small.drop startup consultant
+            small startup advisor
           a.btn.btn-default.btn-lg(href='#clients')
             | Learn More 
             i.fa.fa-arrow-circle-o-down
@@ -58,7 +58,7 @@ html(lang='en')
           .col-md-7
             h2 Ol&aacute; Startups!
             p
-              | Originally from Wisconsin and spent over seven years working in Silicon Valley, most notably for Tesla as it grew from 200 employees to over 5,000. It was a tremendous opportunity and I learned a ton about optimizing our internal tools to keep up with the pace set by our fearless leader, Elon Musk.
+              | Originally from Wisconsin and spent over seven years working in Silicon Valley, most notably for Tesla as it grew from 200 employees to over 7,000. It was a tremendous opportunity and I learned a ton about optimizing our internal tools to keep up with the pace set by our fearless leader, Elon Musk.
             p
               | Since then I took the opportunity to travel, learn how to code and recharge my own batteries ;) I just finished living in London for two years working as a Product & Engineering Manager for a Computer Vision startup. Now I've landed in Portugal hoping to get plugged into the thriving startup scene. 
             br
@@ -69,6 +69,24 @@ html(lang='en')
           .col-md-5
             a(href='#')
               img.img-responsive(src='/images/colintiles.jpg', alt='')
+    section#feat
+      .container
+        .row.features
+          .col-md-4.text-center.wow.fadeInUp(data-wow-delay='100ms')
+            span.typcn.typcn-contacts.x3
+            h4 CRM Implementation
+            p
+              | SalesForce.com was my bread & butter while I worked at Tesla. The sign of a nicely working CRM is one which requires little input from you and your team. I can help you select the right CRM for your needs and budget.
+          .col-md-4.text-center.wow.fadeInUp(data-wow-delay='300ms')
+            span.typcn.typcn-flow-merge.x3
+            h4 Automate Business Process
+            p
+              | I can help automate the manual workflows in your organization. From offloading customer support tasks, generating daily metrics reports, or keeping your teams on the same page I have experience automating solutions like these.
+          .col-md-4.text-center.wow.fadeInUp(data-wow-delay='500ms')
+            span.typcn.typcn-news.x3
+            h4 Email Marketing
+            p
+              | Want to send targeted emails to your leads based on their website activity? I've worked with simple and complex email marketing systems like Eloqua, ExactTarget, and MailChimp. Learn from your open rates and inbox score.
     section#contact.prefooter.wow.fadeInUp(data-wow-delay='300ms')
       .container-fluid
         .row
