added meta data for seo

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,9 @@ html(lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description', content='')
-    meta(name='author', content='')
-    title Colin Gillingham - Startup Consulting
+    meta(name='description', content='Startups looking for some extra help getting rolling should reach out for help. Especially on sales and marketing automation, crm implementation and email marketing.')
+    meta(name='author', content='Colin Gillingham')
+    title Colin Gillingham - Startup Advisor
     // Bootstrap core CSS
     link(href='bootstrap/css/theme.css', rel='stylesheet')
     // Custom styles for this template
