slight footer text tweak

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -99,7 +99,7 @@ html(lang='en')
           .col-md-8
             h3 Colin Gillingham
             p
-              | © 2017 Gillingham. Designed and Developed by Me
+              | © 2017 Gillingham. Express App hosted on Heroku
           .col-md-4
             p.text-right.social
               a(href='https://www.linkedin.com/in/colingillingham', target='_blank')
