adjusted about me text

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='Startups looking for some extra help getting rolling should reach out for help. Especially on sales and marketing automation, crm implementation and email marketing.')
     meta(name='author', content='Colin Gillingham')
-    title Colin Gillingham - Startup Advisor
+    title Colin Gillingham - Startup Nomad & advisor
     // Bootstrap core CSS
     link(href='bootstrap/css/theme.css', rel='stylesheet')
     // Custom styles for this template
@@ -30,7 +30,7 @@ html(lang='en')
           h1
             strong Colin Gillingham
             br
-            small startup advisor
+            small startup nomad
           a.btn.btn-default.btn-lg(href='#clients')
             | Learn More 
             i.fa.fa-arrow-circle-o-down
@@ -58,7 +58,7 @@ html(lang='en')
           .col-md-7
             h2 Ol&aacute; Startups!
             p
-              | Originally from Wisconsin and spent over seven years working in Silicon Valley, most notably for Tesla as it grew from 200 employees to over 7,000. It was a tremendous opportunity and I learned a ton about optimizing our internal tools to keep up with the pace set by our fearless leader, Elon Musk.
+              | I consider myself a bit of a startup nomad these days. Originally from Wisconsin in the US but spent over seven years working in California. The highlight was my time as an early employee at Tesla, spending nearly 6 years building solutions for Sales and Marketing. It was an opportunity of a lifetime and I learned a ton about optimizing our internal tools to keep up with the pace set by our founder & CEO, Elon Musk.
             p
               | Since then I took the opportunity to travel, learn how to code and recharge my own batteries ;) I just finished living in London for two years working as a Product & Engineering Manager for a Computer Vision startup. Now I've landed in Portugal hoping to get plugged into the thriving startup scene. 
             br
