added link to blog post

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,8 +47,6 @@ html(lang='en')
             img.img-responsive(src='/images/generalassembly.png')
           .col-md-12
             br
-            //- h5.text-center 
-            //-   a(target="blank", href="https://docs.google.com/document/d/15ZGG3uAaVv8O60cp0LJFtpToyQYCJSdka3OXl117xSY/edit?usp=sharing") View My Resume / CV
             a#resume.btn.btn-default.btn-lg(href="https://docs.google.com/document/d/15ZGG3uAaVv8O60cp0LJFtpToyQYCJSdka3OXl117xSY/edit?usp=sharing")
               | View Resume 
               i.fa.fa-file-text-o
@@ -59,6 +57,8 @@ html(lang='en')
             h2 Ol&aacute; Startups!
             p
               | I consider myself a bit of a startup nomad these days. Originally from Wisconsin in the US but spent over seven years working in California. The highlight was my time as an early employee at Tesla, spending nearly 6 years building solutions for Sales and Marketing. It was an opportunity of a lifetime and I learned a ton about optimizing our internal tools to keep up with the pace set by our founder & CEO, Elon Musk.
+              br
+              a(href="https://medium.com/@gillinghammer/how-i-got-hired-at-tesla-using-craigslist-9ec30442aa1a", target="_blank") Read the story of how I landed my job at Tesla via a post on Craigslist!
             p
               | Since then I took the opportunity to travel, learn how to code and recharge my own batteries ;) I just finished living in London for two years working as a Product & Engineering Manager for a Computer Vision startup. Now I've landed in Portugal hoping to get plugged into the thriving startup scene. 
             br
