added seo tracking meta tag

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
+    meta(name='google-site-verification', content='vyz_OLOWPmPB5yfu1qFZwXBGW3PyuIvFE5wy_UZ-p5M')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='Startups looking for some extra help getting rolling should reach out for help. Especially on sales and marketing automation, crm implementation and email marketing.')
@@ -102,6 +103,8 @@ html(lang='en')
               | © 2017 Gillingham. Express App hosted on Heroku
           .col-md-4
             p.text-right.social
+              a(href='mailto:colin@gillingh.am', target='_blank')
+                i.fa.fa-envelope
               a(href='https://www.linkedin.com/in/colingillingham', target='_blank')
                 i.fa.fa-linkedin-square
               a(href='https://angel.co/gillinghammer', target='_blank')
