--- a/views/layout.jade
+++ b/views/layout.jade
@@ -72,6 +72,13 @@ html(lang='en')
               img.img-responsive(src='/images/colintiles.jpg', alt='')
     section#feat
       .container
+        .row
+          .col-md-12
+            br
+            h3.text-center Read my blog for lessons learned while working in Silicon Valley and Europe's burgeoning startup scene.
+            a#resume.btn.btn-warning.btn-lg(href="http://blog.gillingh.am/")
+              | Read My Blog Now
+              i.fa.fa-i-cursor
         .row.features
           .col-md-4.text-center.wow.fadeInUp(data-wow-delay='100ms')
             span.typcn.typcn-contacts.x3
