added links to blog

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,6 +27,10 @@ html(lang='en')
     .site-overlay
     header#home.wow.fadeIn
       .container-fluid
+        .row
+          a.btn.btn-danger(href='http://blog.gillingh.am').pull-right
+            | Read My Blog 
+            i.fa.fa-i-cursor
         .jumbotron
           h1
             strong Colin Gillingham
@@ -58,8 +62,6 @@ html(lang='en')
             h2 Ol&aacute; Startups!
             p
               | I consider myself a bit of a startup nomad these days. Originally from Wisconsin in the US but spent over seven years working in California. The highlight was my time as an early employee at Tesla, spending nearly 6 years building solutions for Sales and Marketing. It was an opportunity of a lifetime and I learned a ton about optimizing our internal tools to keep up with the pace set by our founder & CEO, Elon Musk.
-            .well
-              a(href="https://medium.com/@gillinghammer/how-i-got-hired-at-tesla-using-craigslist-9ec30442aa1a", target="_blank") Read the story of how I landed my job at Tesla via a post on Craigslist!
             p
               | Since then I took the opportunity to travel, learn how to code and recharge my own batteries ;) I just finished living in London for two years working as a Product & Engineering Manager for a Computer Vision startup. Now I've landed in Portugal hoping to get plugged into the thriving startup scene. 
             br
@@ -77,7 +79,7 @@ html(lang='en')
             br
             h3.text-center Read my blog for lessons learned while working in Silicon Valley and Europe's burgeoning startup scene.
             a#resume.btn.btn-warning.btn-lg(href="http://blog.gillingh.am/")
-              | Read My Blog Now
+              | Read My Blog Now 
               i.fa.fa-i-cursor
         .row.features
           .col-md-4.text-center.wow.fadeInUp(data-wow-delay='100ms')
