--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,10 @@
 extends layout
 
 block content
-  include templates/home
+  include templates/hero
+  include templates/logos
+  include templates/about
+  include templates/blog
+  include templates/expertise
+  include templates/form
+  include templates/footer
