updated blog icon

--- a/views/templates/blog.jade
+++ b/views/templates/blog.jade
@@ -4,5 +4,5 @@ section
       .col-md-12
         h3.text-center Read my blog for lessons learned while working in Silicon Valley and Europe's burgeoning startup scene.
         a#resume.btn.btn-warning.btn-lg(href="http://blog.gillingh.am/")
-          i.fa.fa-i-cursor
+          i.fa.fa-newspaper-o
           | Read My Blog Now 
