--- a/views/templates/hero.jade
+++ b/views/templates/hero.jade
@@ -3,7 +3,7 @@ header#home.wow.fadeIn
   .container-fluid
     .row
       a.btn.btn-danger(href='http://blog.gillingh.am').pull-right
-        i.fa.fa-i-cursor
+        i.fa.fa-newspaper-o
         | Read My Blog 
         
     .jumbotron
