fixed dead blog linik

--- a/views/indexpt.jade
+++ b/views/indexpt.jade
@@ -28,7 +28,7 @@ html(lang='en')
     header#home.wow.fadeIn
       .container-fluid
         .row
-          a.btn.btn-danger(href='http://blog.gillingh.am').pull-right
+          a.btn.btn-danger(href='https://medium.com/startup-grind/how-i-got-hired-at-tesla-using-craigslist-9ec30442aa1a', target="_blank").pull-right
             | Read My Blog 
             i.fa.fa-i-cursor
         .jumbotron
@@ -78,7 +78,7 @@ html(lang='en')
           .col-md-12
             br
             h3.text-center Read my blog for lessons learned while working in Silicon Valley and Europe's burgeoning startup scene.
-            a#resume.btn.btn-warning.btn-lg(href="http://blog.gillingh.am/")
+            a#resume.btn.btn-warning.btn-lg(href='https://medium.com/startup-grind/how-i-got-hired-at-tesla-using-craigslist-9ec30442aa1a', target="_blank")
               | Read My Blog Now 
               i.fa.fa-i-cursor
         .row.features
