--- a/views/templates/hero.jade
+++ b/views/templates/hero.jade
@@ -2,7 +2,7 @@
 header#home.wow.fadeIn
   .container-fluid
     .row
-      a.btn.btn-danger(href='http://blog.gillingh.am').pull-right
+      a.btn.btn-danger(href='https://medium.com/startup-grind/how-i-got-hired-at-tesla-using-craigslist-9ec30442aa1a', target="_blank").pull-right
         i.fa.fa-newspaper-o
         | Read My Blog 
         
