--- a/views/templates/blog.jade
+++ b/views/templates/blog.jade
@@ -3,6 +3,6 @@ section
     .row
       .col-md-12
         h3.text-center Read my blog for lessons learned while working in Silicon Valley and Europe's burgeoning startup scene.
-        a#resume.btn.btn-warning.btn-lg(href="http://blog.gillingh.am/")
+        a#resume.btn.btn-warning.btn-lg(href='https://medium.com/startup-grind/how-i-got-hired-at-tesla-using-craigslist-9ec30442aa1a', target="_blank")
           i.fa.fa-newspaper-o
           | Read My Blog Now 
